--- a/project2/book/templates/book_list.html
+++ b/project2/book/templates/book_list.html
@@ -61,6 +61,9 @@
   <button class ='handle-book-btn create-book-btn'>
     <a href="{% url 'book:book_create' %}">Create New Book</a>
   </button>
+  <button class ='handle-book-btn create-book-btn'>
+    <a href="/book/category/create/">Create New Category</a>
+  </button>
   {% endif %}
   </div>
 {% endblock %}
