--- a/project2/home/static/home/style.css
+++ b/project2/home/static/home/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -289,6 +290,9 @@ body {
 .main-order{
     padding:50px
 }
+
+/* contact in style2.css */
+
 /* footer */
 .footer{
     height: 10vh;
