--- a/project2/home/templates/home/base.html
+++ b/project2/home/templates/home/base.html
@@ -10,8 +10,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href='{% static "home/favicon.ico" %}'>
-    <link rel="stylesheet" href='{% static "home/style.css" %}' />
+    <link rel="stylesheet" type="text/css" href='{% static "home/style2.css" %}' />
+    <link rel="stylesheet" type="text/css" href='{% static "home/style.css" %}' />
     <title>BOOK SHOP</title>
+    <style>
+      
+    </style>
   </head>
   <body>
     <div class="header">
@@ -25,10 +29,10 @@
           <a href="/book">Books</a>
         </div>
         <div class="header-menu-item">
-          <a href="#">About</a>
+          <a href="#about-part">About</a>
         </div>
         <div class="header-menu-item">
-          <a href="#">Contact</a>
+          <a href="#contact-part">Contact</a>
         </div>
       </div>
       <div class="header-icon">
@@ -78,6 +82,87 @@
           />
         </div>
       </div>
+    </div>
+  
+    <div id="about-part">
+      <div class='about-title'>
+        <h2>About Us</h2>
+      </div>
+      <div class='about-details'>
+        <div class="about-left">
+          <h2>Established in 1995</h2>
+      </div>
+      <div class='about-right'>
+          <div class="about-main-title">
+              Tell people about what you, your expertise and experience.  Think about what you would want to see on this page if you were looking at an about page.  This is your chance to tell about how you are qualified to serve them.
+
+          </div>
+          <div class="about-main-script">
+              Tell people about what you, your expertise and experience.  Think about what you would want to see on this page if you were looking at an about page.  This is your chance to tell about how you are qualified to serve them.
+
+          </div>
+          <div class="about-main-script">
+              We look forward to your stay.
+          </div>
+
+          <div class="about-sign">
+              PTIT
+          </div>
+      </div>
+      </div>
+  </div>
+
+    <div id = 'contact-part'>
+      <div class='contact-title'>
+          <h2>Contact Us</h2>
+      </div>
+      <div class='contact-details'>
+        <div class='contact-map'>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3125.3677270382605!2d105.78758394895978!3d20.98033226085798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135accdd8a1ad71%3A0xa2f9b16036648187!2zSOG7jWMgdmnhu4duIEPDtG5nIG5naOG7hyBCxrB1IGNow61uaCB2aeG7hW4gdGjDtG5n!5e0!3m2!1svi!2s!4v1680530214365!5m2!1svi!2s" width="550" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div  class='contact-right'>
+          
+          <div>
+            <div class='contact-right-title'>
+              <h2>Send Us a Message</h2>
+            </div>
+            <div class='contact-form'>
+            
+              <input type='text' placeholder='Name'  />
+            </div>
+            <div class='contact-form'>
+            
+              <input type='text' placeholder='Phone Number' />
+            </div>
+            <div class='contact-form'>
+            
+              <input type='text' placeholder='Email'  />
+            </div>
+            <div class='contact-form'>
+              <textarea placeholder='Message' name="" id="" cols="30" rows="10"></textarea>
+            </div>
+            <div class='contact-form'>
+              <button class ='handle-book-btn' type='submit'> Submit</button>
+            </div>
+          </div>
+
+
+          {% comment %} <div>
+            <div class= 'contact-social-media'>
+              <div > 
+                <i class="fa-brands fa-square-facebook contact-social-media-item"></i>
+              </div>
+              <div  >
+                <i class="fa-brands fa-square-youtube contact-social-media-item"></i>
+              </div>
+              <div >
+                <i class="fa-brands fa-square-twitter contact-social-media-item"></i>
+              </div>
+            </div>
+          </div> {% endcomment %}
+        </div>
+      </div>
+      
     </div>
 
     {% comment %} footer {% endcomment %}
