--- a/project2/order/templates/baseOrder.html
+++ b/project2/order/templates/baseOrder.html
@@ -66,10 +66,10 @@
           <a id="actived" href="/book">Books</a>
         </div>
         <div class="header-menu-item">
-          <a href="#">About</a>
+          <a href="http://127.0.0.1:8000/#about-part">About</a>
         </div>
         <div class="header-menu-item">
-          <a href="#">Contact</a>
+          <a href="http://127.0.0.1:8000/#contact-part">Contact</a>
         </div>
       </div>
       <div class="header-icon">
