--- a/project2/book/templates/baseBook.html
+++ b/project2/book/templates/baseBook.html
@@ -15,44 +15,9 @@
       href='{% static "home/favicon.ico" %}'
     />
     <link rel="stylesheet" href='{% static "home/style.css" %}' />
+    <link rel="stylesheet" href='{% static "book/style.css" %}' />
     <title>BOOK SHOP</title>
-    <style type="text/css">
-      .category-create {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 30px;
-      }
-      #create-form p {
-        display: flex;
-        flex-direction: column;
-        justify-content:center;
-        gap: 10px;
-      }
-      #create-form input[type="text"],select {
-        padding: 5px 10px;
-        font-size: 14px;
-        border-radius: 5px;
-        outline: #30333a;
-        width: 300px;
-        height: 35px;
-        margin-bottom: 20px;
-      }
-      #create-form textarea {
-        padding: 5px 10px;
-        font-size: 14px;
-        border-radius: 5px;
-        outline: #30333a;
-        width: 300px;
-        height: 50px;
-        margin-bottom: 20px;
-      }
-      #create-form button{
-        width:200px;
-        margin-left: 50px;
-      }
-    </style>
+    
   </head>
   <body>
     <div class="header">
@@ -66,10 +31,10 @@
           <a id="actived" href="/book">Books</a>
         </div>
         <div class="header-menu-item">
-          <a href="http://127.0.0.1:8000/#about-part">About</a>
+          <a href="#">About</a>
         </div>
         <div class="header-menu-item">
-          <a href="http://127.0.0.1:8000/#contact-part">Contact</a>
+          <a href="#">Contact</a>
         </div>
       </div>
       <div class="header-icon">
