--- a/project2/home/static/home/style.css
+++ b/project2/home/static/home/style.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    scroll-behavior: smooth;
 }
 
 body {
@@ -144,11 +143,11 @@ body {
     width: 80%;
     margin: auto;
 }
-.main-search{
+/* .main-search{
     display: flex;
-    justify-content: center;
+    justify-content:end;
     padding-bottom: 50px;
-}
+} */
 .main-search input{
     padding: 5px 10px;
     font-size: 14px;
@@ -177,91 +176,8 @@ body {
 }
 
 
-/* book-list */
-#book-list-table{
-    border-collapse: collapse;
-    width: 100%;
-    text-align: center;
-}
-#book-list-table th {
-    border: 2px solid #fff;
-    padding: 8px;
-    text-align: center;
-}
-#book-list-table td{
-    border: 2px solid #946659;
-    padding: 8px;
-}
-#book-list-table tr:nth-child(even){background-color: #f2f2f2;}
+/* book-list in book/style.css */
 
-#book-list-table tr:hover {background-color: #ddd;}
-
-#book-list-table th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: #946659;
-  color: white;
-}
-
-
-.book-item-image {
-    max-width: 400px;
-    min-width: 100px;
-    
-}
-
-
-.handle-book-btn-wrapper{
-    display: flex;
-    flex-direction: column;
-    gap:10px
-}
-.handle-book-btn a{
-    color: white;
-    text-decoration: none;
-
-}
-
-.handle-book-btn{
-    padding: 5px 10px;
-    background-color:#946659;
-    color :white;
-    border: none;
-    outline: none;
-    font-size: 14px;
-    width: 100px;
-    height: 35px;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-bottom: 10px;
-}
-.create-book-btn{
-    width: 200px;
-    margin-top: 20px;
-}
-
-
-/* book details */
-.book-details{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    justify-content: start;
-    align-items: center;
-}
-.book-details-title{
-    font-size: 28px;
-}
-.book-details-image p{
-    text-align: center;
-}
-
-/* create book */
-#create-form ~ p{
-    display: flex;
-    margin-bottom: 20px;
-}
 
 
 /* category */
@@ -291,8 +207,107 @@ body {
     padding:50px
 }
 
-/* contact in style2.css */
 
+
+*{
+    
+    scroll-behavior: smooth;
+}
+
+
+#about-part{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 80px 0;
+    gap: 40px;
+    width: 100%;
+}
+.about-title h2{
+    font-size: 42px;
+    margin-bottom: 30px;
+}
+.about-details{
+    display: flex;
+    width: 80%;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.about-left{
+    flex:1;
+}
+.about-right{
+    flex:1;
+}
+.about-main-title{
+    font-size: 18px;
+    font-weight: 600;
+    padding-bottom: 20px;
+}
+.about-main-script{
+    font-size: 18px;
+    padding-bottom: 20px;
+}
+.about-sign{
+    font-size: 18px;
+    font-weight: 600;
+}
+#contact-part {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 80px 0;
+    gap: 40px;
+    width: 100%;
+    background-color: #fceae6;
+}
+
+.contact-title h2{
+    font-size: 42px;
+    margin-bottom: 30px;
+}
+.contact-details{
+    display: flex;
+    width: 80%;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.contact-right-title{
+    margin-bottom: 30px;
+    align-items: center;
+}
+.contact-right-top{
+    display: flex;
+    flex-direction: column;
+    gap:20px;
+    font-size: 16px;
+}
+.contact-form input[type="text"],select {
+    padding: 5px 10px;
+    font-size: 14px;
+    border-radius: 5px;
+    outline: #30333a;
+    width: 300px;
+    height: 35px;
+    margin-bottom: 20px;
+  }
+  .contact-form textarea {
+    padding: 5px 10px;
+    font-size: 14px;
+    border-radius: 5px;
+    outline: #30333a;
+    width: 300px;
+    height: 100px;
+    margin-bottom: 20px;
+  }
+  .contact-form button{
+    width:100%;
+  }
+  .contact-form button:active{
+    transform: translateY(2px);
+  }
 /* footer */
 .footer{
     height: 10vh;
