--- a/project2/home/templates/home/base.html
+++ b/project2/home/templates/home/base.html
@@ -10,12 +10,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href='{% static "home/favicon.ico" %}'>
-    <link rel="stylesheet" type="text/css" href='{% static "home/style2.css" %}' />
-    <link rel="stylesheet" type="text/css" href='{% static "home/style.css" %}' />
+    <link rel="stylesheet" href='{% static "home/style.css" %}' />
+    <link rel="stylesheet" href='{% static "home/style2.css" %}' />
     <title>BOOK SHOP</title>
-    <style>
-      
-    </style>
   </head>
   <body>
     <div class="header">
@@ -83,7 +80,6 @@
         </div>
       </div>
     </div>
-  
     <div id="about-part">
       <div class='about-title'>
         <h2>About Us</h2>
