--- a/project2/book/templates/book_list.html
+++ b/project2/book/templates/book_list.html
@@ -1,65 +1,47 @@
-{% extends 'baseBook.html' %}
-
-{% block content %}
-  <div class='book-list'>
-   <div class='book-list-title'>
+{% extends 'baseBook.html' %} {% block content %}
+<div class="book-list">
+  <div class="book-list-title">
     <h1>Book List</h1>
-   </div>
-  <div >
-    <table id='book-list-table'>
-      <thead>
-        <tr>
-          <th>id</th>
-          <th>Price</th>
-          <th>Category</th>
-          <th>Author</th>
-          <th>image</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for book in books %}
-          <tr>
-            <td>{{ book.name }}</td>
-            <td>{{ book.price }}</td>
-            <td>{{ book.category_id.name }}</td>
-            <td>{{ book.author}}</td>
-            <td><img class="book-item-image" src="{{ book.image.url }}" alt="{{ book.name }}"></td>
-             <td>
-              <div class='handle-book-btn-wrapper'>
-                <div>
-                  <button class ='handle-book-btn'>
-                    <a href="{% url 'book:book_detail' book.book_id %}">Detail</a>  
-                  </button>
-                </div>  
-              {% if request.user.is_superuser %}
-              <div>
-                <button class ='handle-book-btn'>
-                  <a href="{% url 'book:book_delete' book.pk %}">Delete</a> 
-                </button> 
-              </div> 
-              <div>
+  </div>
+  <div class="margin-bottom-20">
+    {% if request.user.is_superuser %}
+    <button class="handle-book-btn create-book-btn">
+      <a href="{% url 'book:book_create' %}">Create New Book</a>
+    </button>
+    
+    {% endif %}
+    <button class="handle-book-btn create-book-btn">
+      <a href="/book/category/">Category</a>
+    </button>
+  </div>
+  <div>
+    <div class="wrapper">
+      {% for book in books %}
+      <div class="card">
+        <div class="book-image">
+          <a href="{% url 'book:book_detail' book.book_id %}">
+            <img
+            class="book-item-image"
+            src="{{ book.image.url }}"
+            alt="{{ book.name }}"
+            
+          /></a>
+          
+        </div>
+        <div class="book-details">
+          <h4><a href="{% url 'book:book_detail' book.book_id %}">{{ book.name }}</a></h4>
+          <h4>{{ book.price }}đ</h4>
+        </div>
+        <div>
+          <button class="handle-book-btn">
+            <a href="{% url 'cart:add_to_cart' book.pk %}">Add to cart</a>
+          </button>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
 
-              {% endif %}
-              <div>
-                <button class ='handle-book-btn'>
-                  <a href="{% url 'cart:add_to_cart' book.pk %}">Add to cart</a>
-                </button>
-              </div>
-              </div>
-            </td> 
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
+    
   </div>
-  {% if request.user.is_superuser %}
-  <button class ='handle-book-btn create-book-btn'>
-    <a href="{% url 'book:book_create' %}">Create New Book</a>
-  </button>
-  <button class ='handle-book-btn create-book-btn'>
-    <a href="/book/category/create/">Create New Category</a>
-  </button>
-  {% endif %}
-  </div>
-{% endblock %}
+  {% endblock %}
+</div>
