--- a/project2/cart/templates/baseCart.html
+++ b/project2/cart/templates/baseCart.html
@@ -53,10 +53,10 @@
           <a id="actived" href="/book">Books</a>
         </div>
         <div class="header-menu-item">
-          <a href="http://127.0.0.1:8000/#about-part">About</a>
+          <a href="#">About</a>
         </div>
         <div class="header-menu-item">
-          <a href="http://127.0.0.1:8000/#contact-part">Contact</a>
+          <a href="#">Contact</a>
         </div>
       </div>
       <div class="header-icon">
