--- a/project2/book/templates/baseBook.html
+++ b/project2/book/templates/baseBook.html
@@ -68,19 +68,37 @@
 
     <div class="main">
       <div class="main-books">
-        <div class="main-search">
-          <form method="GET" action="{% url 'book:book_search' %}">
-            <input
-              type="text"
-              name="query"
-              placeholder="Search by book name or author"
-            />
-            <button type="submit">Search</button>
-          </form>
+        <div class = 'main-top'>
+          <div class="main-search">
+            <form method="GET" action="{% url 'book:book_search' %}">
+              <input
+                type="text"
+                name="query"
+                placeholder="Search by book name or author"
+              />
+              <button type="submit">Search</button>
+            </form>
+          </div>
+          <div class="margin-bottom-20">
+            {% if request.user.is_superuser %}
+            <button class="handle-book-btn create-book-btn">
+              <a href="{% url 'book:book_create' %}">Create New Book</a>
+            </button>
+            
+            {% endif %}
+            <button class="handle-book-btn create-book-btn">
+              <a href="/book/category/">Category</a>
+            </button>
+          </div>
         </div>
 
         {% block content %} {%endblock%}
+        
       </div>
+      </div>
+      <div class="footer">Copyright © 2023 PTIT | Powered by PTIT</div>
+
+    
     </div>
     <script>
       function displayLogin() {
