--- a/project2/cart/templates/baseCart.html
+++ b/project2/cart/templates/baseCart.html
@@ -91,6 +91,9 @@
         {% block content %} {% endblock %}
     </div>  
     </div>
+    <div class="footer">Copyright © 2023 PTIT | Powered by PTIT</div>
+
+    
     <script>
       function displayLogin() {
         console.log("displayLogin");
